--- a/src/css/scss/styles.scss
+++ b/src/css/scss/styles.scss
@@ -20,6 +20,7 @@
 @import 'components/header';
 @import 'components/footer';
 @import 'components/table';
+@import 'components/_flaticon';
 
 /// injected CSS message
 #__bs_notify__ {display: none !important;}
