heavy design work

--- a/app/assets/fonts/animals/_flaticon.scss
+++ b/app/assets/fonts/animals/_flaticon.scss
@@ -1,6 +1,6 @@
     /*
     Flaticon icon font: Flaticon
-    Creation date: 03/06/2016 10:31
+    Creation date: 04/06/2016 08:13
     */
 
     @font-face {
@@ -41,11 +41,13 @@
 .flaticon-draw:before { content: "\f102"; }
 .flaticon-pig-with-round-tail:before { content: "\f103"; }
 .flaticon-sheep-with-wool:before { content: "\f104"; }
-.flaticon-turkey-facing-right:before { content: "\f105"; }
+.flaticon-thermometer:before { content: "\f105"; }
+.flaticon-turkey-facing-right:before { content: "\f106"; }
     
     $font-Flaticon-chicken-looking-right: "\f100";
     $font-Flaticon-cow-silhouette: "\f101";
     $font-Flaticon-draw: "\f102";
     $font-Flaticon-pig-with-round-tail: "\f103";
     $font-Flaticon-sheep-with-wool: "\f104";
-    $font-Flaticon-turkey-facing-right: "\f105";
+    $font-Flaticon-thermometer: "\f105";
+    $font-Flaticon-turkey-facing-right: "\f106";
