--- a/src/css/scss/bits/_colors.scss
+++ b/src/css/scss/bits/_colors.scss
@@ -1,4 +1,4 @@
-$primary-color: #C02133;
+$primary-color: #4574ce;
 $primary-color-shade: darken($primary-color, 15%);
 $primary-color-tint: lighten($primary-color, 15%);
 
@@ -28,3 +28,10 @@ $off-black: #999;
 $font-color: #333;
 $font-color-shade: darken($font-color, 10%);
 $font-color-tint: lighten($font-color, 10%);
+
+$food-chicken: #fde628;
+$food-cow: #b17753;
+$food-fish: #f1786a;
+$food-pig: #f7b8c3;
+$food-lamb: #fff;
+$food-turkey: #88653f;
