--- a/src/css/scss/bits/_setup.scss
+++ b/src/css/scss/bits/_setup.scss
@@ -1,4 +1,4 @@
-$heading-font: 'Noto Sans';
+$heading-font: 'Fjalla One';
 $heading-fallback: 'Helvetica', 'Helvetica Neue', 'Arial', sans-serif;
 $body-fallback: 'Helvetica', 'Helvetica Neue', 'Arial', sans-serif;
 $global-radius: 3px;
