--- a/src/css/scss/components/_basic-layout.scss
+++ b/src/css/scss/components/_basic-layout.scss
@@ -1,9 +1,25 @@
 body {
+	&.page-open {
+		.page-content {
+			right: 0;
+		}
+	}
+
+	&.page-closed {
+		.page-content {
+			right: -100%;
+		}
+		@include breakpoint(small only) {
+			main {
+				overflow: hidden;
+			}
+		}
+	}	
 }
 .page-content {
-	background: $white;
+	background: $gray-color;
 	margin: 0 auto;
-	max-width: 500px;
+	//max-width: 500px;
 	height: 100%;
 	position: absolute;
 	right: -100%;
@@ -12,16 +28,15 @@ body {
 	
 	@include flexbox;
 	@include flex-direction(column);
-	@include flex-wrap(wrap);
+	//@include flex-wrap(wrap);
 	@include flex(1 1 100%);
 	@include single-transition;
-
-	&.page-open {
-		right: 0;
-	}
-
-	&.page-closed {
-		right: -100%;	
+	
+	@include breakpoint(medium) {
+		border-left: 2px solid $black;
+		height: auto;
+		position: static;
+		@include flex(1 0 50%);
 	}
 
 	> div {
@@ -29,40 +44,38 @@ body {
 
 		@include flexbox;
 		@include flex-direction(column);
-		@include flex-wrap(wrap);
+		//@include flex-wrap(wrap);
+		@include flex(1 0 100%);
 		@include single-transition;
 	}
 }
 
 
 main {
-	background: $white;
 	margin: 0 auto;
-	max-width: 500px;
+	//max-width: 500px;
 	min-height: 100%;
 	position: relative;
-	overflow: hidden;
+	//overflow: hidden;
 	width: 100%;
 	@include flexbox;
-	@include flex-direction(column);
+	@include flex-direction(row);
 	@include flex-wrap(wrap);
-
-	&:before{
-	    display: block;
-	    content: '';
-	    height: 20px;
-	    top: 0;
-	    background: $black;
-	}
 
 	nav {
 		
 		@include flexbox;
 		@include flex(1 0 100%);
-
+		@include flex-direction(column);
+		@include flex-wrap(wrap);
+		
+		@include breakpoint(medium) {
+			@include flex(1 0 50%);
+		}
 
 		ul {
 			@include flexbox;
+			@include flex(1 0 auto);
 			@include flex-direction(row);
 			@include flex-wrap(wrap);
 		}
@@ -99,16 +112,16 @@ main {
 
 .footer-heading {
 	background: $black;
-	border: 2px solid $off-black;
 	border-bottom: none;
 	border-top: none;
 	color: #fff;
 	@include flex(0 1 auto);
 
 	h3 {
+		color: $white;
 		font-size: 1rem;
 		margin: 0;
-		padding: .5rem;
+		padding: .75rem;
 		text-align: center;
 		width: 100%;
 	}
@@ -123,7 +136,7 @@ body {
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
 }
 
 
@@ -131,16 +144,15 @@ html, body {
 	background: $black;
 	color: #fff;
 	padding: .5rem;
+	position: relative;
 	text-align: center;
-	@include flex(0 1 auto);
-
-	&:before{
-	    display: block;
-	    content: '';
-	    height: 20px;
-	    top: 0;
-	    background: $black;
-	}
+	
+	@include flexbox;
+	@include align-item(center);
+	@include justify(center);
+	@include flex(1 0 100%);
+	@include flex-direction(column);
+	@include flex-wrap(wrap);
 
 	h3 {
 		font-size: 1rem;
@@ -148,32 +160,58 @@ html, body {
 		
 		text-align: center;
 	}
+
 }
 
 .food-content {
 	@include flexbox;
 	@include flex-direction(column);
-	@include flex-wrap(wrap);
-	@include flex(1 0 100%);
+	//@include flex-wrap(wrap);
+	@include flex(1 0 auto);
 
 	.food-icon {
+		background: $black;
+		color: $white;
 		display: block;
-		font-size: 7rem;
-		padding: 1rem 0; 
+		
+		padding: 1rem;
 		text-align: center;
 		
 		@include flexbox;
 		@include align-item(center);
 		@include justify(center);
-		@include flex(1 0 100%);
+		@include flex(1 1 auto);
+		@include flex-direction(column);
+		@include flex-wrap(wrap);
 
 		i {
-
+			font-size: 7rem;
+			line-height: 1rem;
 		}
+	}
+	
+	.food-label {
+		border-width: 2px;
+		border-style: solid;
+		border-radius: 50px;
+		color: $white;	
+		font-size: 3rem;
+		line-height: 3rem;
+		margin: 1rem 0 0;
+		padding: 1.5rem 4rem;
+		text-align: center;
+		width: auto;
 	}
 
 	.food-states {
 		@include flex(0 1 auto);
+	}
+
+	.thermometer {
+		color: $alert-color;
+		display: inline-block;
+		font-size: 1.25rem;
+		margin-top: -.25rem;
 	}
 }
 
@@ -182,25 +220,17 @@ html, body {
 	color: #fff;
 	font-size: 1rem;
 	margin: 0;
-	padding: .5rem;
+	padding: 0 1rem;
 	position: relative;
 	text-align: center;
 	width: 100%;
 
-	@include flex(0 1 auto);
+	@include flex(0 0 auto);
 
-	.back-button {
-		color: #fff;
-		cursor: pointer;
-		float: left;
-		left: .5rem;
-		position: absolute;
-		top: .75rem;
-	}
 	
 	.switch {
 		position: absolute;
-		right: .5rem;
+		right: .75rem;
 		top: .75rem;
 	}
 
@@ -208,6 +238,7 @@ html, body {
 	h3 {
 		font-size: 1rem;
 		margin: 0;
+		padding: .75rem;
 		text-align: center;
 	}
 
@@ -215,13 +246,33 @@ html, body {
 		font-size: 1.125rem;
 		line-height: 1rem;
 	}
+
+	.back-button {
+		color: $white;
+		cursor: pointer;
+		left: .75rem;
+		position: absolute;
+		top: .75rem;
+	}
 }
 
+.food-states {
+	@include flexbox;
+	@include flex(0 0 auto);
+	@include flex-direction(column);
+	//@include flex-wrap(wrap);
+	margin: .25rem .5rem;
+}
 .food-state {
-	border-top: 1px solid $off-black;
+	background: $white;
+	border: 1px solid $gray-color-shade;
+	box-shadow: 0 3px 5px $gray-color-shade;
 	float: left;
+	margin: .25rem 0;
 	padding: .5rem;
 	width: 100%;
+
+	@include flex(0 0 auto);
 
 	.food-state-label {
 		float: left;
@@ -231,4 +282,29 @@ html, body {
 	.food-state-temperatures {
 		float: right;
 	}	
+}
+
+
+.ios-web-app {
+	.food-header {
+		&:before{
+			display: block;
+			content: '';
+			height: 20px;
+			top: 0;
+			background: $black;
+		}
+	}
+
+	main {
+		nav {
+			&:before{
+				display: block;
+				content: '';
+				height: 20px;
+				top: 0;
+				background: $black;
+			}
+		}
+	}
 }
