--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -1,3 +1,5 @@
 <div class="food-content">
-	<span class="food-icon"></span>
+	<span class="food-icon">
+		<h1 class="home-title">Select What You Cooking for Cooking Temperatures</h1>
+	</span>
 </div>
