--- a/src/css/scss/bits/_extends.scss
+++ b/src/css/scss/bits/_extends.scss
@@ -1,3 +1,9 @@
 %noselect {
 	user-select: none;
 }
+
+%box-tile {
+	background: $white;
+	border: 1px solid $gray-color-shade;
+	box-shadow: 0 3px 5px $gray-color-shade;
+}
