--- a/src/css/scss/components/_navigation.scss
+++ b/src/css/scss/components/_navigation.scss
@@ -19,10 +19,7 @@ nav {
 	}
 
 	a {
-		background: $white;
-		border: 1px solid $gray-color-shade;
-		//border-radius: $global-radius;
-		box-shadow: 0 3px 5px $gray-color-shade;
+		@extend %box-tile;
 		text-align: center;
 		text-decoration: none;
 
